--- a/style.css
+++ b/style.css
@@ -117,6 +117,7 @@ padding: 0;
     align-items: center;
     border-radius: 5px;
     transition: border .3s;
+
 }
 
 .card-icon:hover {
@@ -132,7 +133,10 @@ padding: 0;
 .card-icon-link:hover .card-icon {
     color: rgba(95, 147, 226, 0.8);
 }
-
+.card-icon-link:hover
+{
+  transform: scale(1.2) rotate(5deg);
+}
 .card-btn {
     border: none;
     outline: none;
@@ -145,4 +149,8 @@ padding: 0;
     font-size: 12px;
     box-shadow: 0 10px 20px rgba(0, 0, 0, .5);
     cursor: pointer;
+}
+.card-btn:hover
+{
+transform: scale(1.3);
 }
